fixing the weird height/width issues on mobile

--- a/src/app/components/side_menu/side_menu.less
+++ b/src/app/components/side_menu/side_menu.less
@@ -6,7 +6,7 @@
   top: 0;
   z-index: -1;
   width: 300px;
-  height: 100vh;
+  height: calc(100vh);
   transform: translate3d(-310px, 0, 0);
   transition: transform 0.25s ease-out;
   background-color: @backgroundColour;
